@@ -14,6 +14,10 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Mar 6, 2015 A. Dotti (channelingExample-V10-00-06)
+- Initialization of GPS defaults moved to master
+
 October 16, 2014 E. Bagli (channelingExample-V10-00-15)
 - minor modification to condition for vr
 - minor modification to computation of channeling outgoing angle
